msteller-Ai/mlops-templates
msteller-Ai/mlops-templates

--- a/classical/python-sdk/mlops/devops-pipelines/deploy-model-batch-scoring.yml
+++ b/classical/python-sdk/mlops/devops-pipelines/deploy-model-batch-scoring.yml
@@ -21,7 +21,7 @@ pool:
 resources:
   repositories:
     - repository: mlops-templates  # Template Repo
-      name: Azure/mlops-templates
+      name: msteller-Ai/mlops-templates
       endpoint: github-connection # need to set up and hardcode
       type: github
 
