--- a/infrastructure/terraform/pipelines/tf-ado-deploy-infra.yml
+++ b/infrastructure/terraform/pipelines/tf-ado-deploy-infra.yml
@@ -18,7 +18,7 @@ pool:
 resources:
   repositories:
     - repository: mlops-templates 
-      name: Azure/mlops-templates 
+      name: msteller-Ai/mlops-templates 
       endpoint: github-connection
       type: github
       ref: main #branch name
