--- a/config-infra-prod.yml
+++ b/config-infra-prod.yml
@@ -7,8 +7,8 @@ variables:
   # Global
   ap_vm_image: ubuntu-20.04
 
-  namespace: mlopsv2
-  postfix: 0518
+  namespace: mlopsv2moetest
+  postfix: 0910
   location: westus
   environment: prod
   enable_aml_computecluster: true
